--- a/css/addActivity.css
+++ b/css/addActivity.css
@@ -1,5 +1,9 @@
+.form-title {
+  text-align: center;
+}
 [type="date"] {
-  background: #fff url(https://cdn1.iconfinder.com/data/icons/cc_mono_icon_set/blacks/16x16/calendar_2.png) 97% 50% no-repeat;
+  background: #fff url(https://cdn1.iconfinder.com/data/icons/cc_mono_icon_set/blacks/16x16/calendar_2.png) 97% 50%
+    no-repeat;
 }
 [type="date"]::-webkit-inner-spin-button {
   display: none;
@@ -31,8 +35,11 @@ input {
   flex-direction: column;
   border-radius: 6px;
 }
+#form-add div {
+  width: 100%;
+}
 #form-add div input {
-  width: 400px;
+  width: 100%;
   height: 35px;
 }
 #form-add div.activities input {
