--- a/css/wallets.css
+++ b/css/wallets.css
@@ -459,3 +459,128 @@ tbody tr td:first-child {
     display: none;
   }
 }
+
+/* Dropdown */
+.container-nav {
+  justify-content: space-between;
+  margin-bottom: 20px;
+  align-items: flex-start !important;
+}
+.select-hidden {
+  display: none;
+  visibility: hidden;
+  padding-right: 10px;
+}
+.select {
+  cursor: pointer;
+  display: inline-block;
+  position: relative;
+  font-size: 16px;
+  color: #fff;
+  height: 40px;
+}
+.select:nth-child(1) {
+  width: 90px;
+}
+.select:nth-child(2) {
+  width: 145px;
+}
+.select-styled {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background-color: #4e73df;
+  padding: 8px 15px;
+  -moz-transition: all 0.2s ease-in;
+  -o-transition: all 0.2s ease-in;
+  -webkit-transition: all 0.2s ease-in;
+  transition: all 0.2s ease-in;
+}
+.select-styled:after {
+  content: "";
+  width: 0;
+  height: 0;
+  border: 7px solid transparent;
+  border-color: #fff transparent transparent transparent;
+  position: absolute;
+  top: 16px;
+  right: 10px;
+}
+.select-styled:hover {
+  background-color: #4e73df;
+}
+.select-styled:active,
+.select-styled.active {
+  background-color: #4e73df;
+}
+.select-styled:active:after,
+.select-styled.active:after {
+  top: 9px;
+  border-color: transparent transparent #fff transparent;
+}
+.select-options {
+  display: none;
+  position: absolute;
+  top: 100%;
+  right: 0;
+  left: 0;
+  z-index: 999;
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  background-color: #4e73df;
+}
+.select-options li {
+  margin: 0;
+  padding: 12px 0;
+  text-indent: 15px;
+  border-top: 1px solid #4e73df;
+  -moz-transition: all 0.15s ease-in;
+  -o-transition: all 0.15s ease-in;
+  -webkit-transition: all 0.15s ease-in;
+  transition: all 0.15s ease-in;
+}
+.select-options li:hover,
+.select-options li.is-selected {
+  color: #4e73df;
+  background: #fff;
+}
+.select .select-styled {
+  border-radius: 6px;
+}
+.btn-action-tabel {
+  gap: 10px;
+}
+.button-action-nav.flex {
+  flex-wrap: wrap !important;
+  gap: 8px !important;
+  justify-content: flex-end !important;
+}
+.short {
+  flex-wrap: wrap;
+  gap: 8px;
+  align-items: stretch;
+}
+.select-options li:first-child {
+  display: none !important;
+}
+@media (max-width: 468px) {
+  .container-nav {
+    flex-direction: column;
+    margin-bottom: 0;
+    gap: 10px;
+    align-items: center !important;
+  }
+  .container-nav a {
+    order: 1;
+  }
+  .container-nav form {
+    order: 2;
+  }
+  .container-nav :where(form, a),
+  .show_alert {
+    width: 100%;
+  }
+}
